--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,70 +4,77 @@
   - name: Full Name
     value: Xuxin Tang
   - name: Contact
-    value: jsxlei [at] gmail [dot] com
+    value: tangxuxin_22 [at] 163 [dot] com
 
-- title: Research Areas
-  type: list
-  contents:
-  - My PhD research focuses on developing artificial intelligence tool for analysis of single-cell RNA-seq and ATAC-seq data to uncover gene regulation in cell heterogeneity. In my PhD dissertation, “Artificial intelligence method for single-cell ATAC-seq data via feature extraction”, I studied analysis methods for uncovering the regulatory variations across various cell types observed from high-dimensional and sparse single-cell ATAC-seq data. 
-  - I am also passionate about applying network analysis methods. Previously, I did some research in structural-protein-protein interaction (PPI) network to find out structural modules enriching cancer mutations and drug targets.
-  
 - title: Education
   type: table
   contents:
-  - title: Tsinghua University – Ph.D. in Computational Biology
-    year: 2015 - 2020
+  - title: Wuhan University – Master
+    year: 2015 - 2018
     location: China
-    description:
-    - 'Advised by <a href="http://life.tsinghua.edu.cn/lifeen/info/1034/1075.htm" target="_blank"><b>Prof. Qiangfeng Cliff Zhang</b></a>'
-    - 'Thesis: Artificial intelligence method for single-cell ATAC-seq data via feature extraction'
-  - title: University of Science and Technology of China – B.S. in Biology
+  - title: Wuhan University – Bachelor
     year: 2011 - 2015
     location: China
-    description:
-    - 'Advised by <a href="https://molbio.princeton.edu/people/nieng-yan" target="_blank"><b>Prof. Nieng Yan</b></a>'
-    - 'Thesis: Structure basis and transport mechanism of membrane protein GLUT3'
 
-- title: Other Research Experience
+- title: Research & Project Experience
   type: table
   contents:
-
-  - title: 'Research for Undergraduates Program'
-    year: 2013 - 2014
+  - title: 'The Practice of Cloud Platform Container Auto-scaling based on Elasticity Measurement'
+    year: 2015 - 2017
     location: China
-    description:
-    - 'University of Science and Technology of China'
-    - 'Advised by <a href="https://sites.google.com/site/mariusleordeanu/home" target="_blank"><b>Prof. Jianye Zang</b></a>'
-    - 'Structure and function research of ubiquitin ligase TRAIP (TRAF-interacting protein) including molecular clone, protein expression and purification, pull down, inclusion body denaturation and renaturation experiments.'
-  - title: '2013 USTC-China iGEM Team'
-    year: 2012 - 2013
+    items:
+    - 'Proposed a framework with container auto-scaler, which monitors the resource usage of the containers and the associated scales in or scales out containers in need'
+    - 'Defined a measurable cloud elasticity by providing executable analysis on the elastic performance of container- based autoscaling'
+    - 'The first work to quantify the cloud elasticity with container-baised auto-scaling and it has been accepted as a full IEEE research paper and extended in a SCI journal with the total citation of 23 so far'
+  - title: 'A Night Image Enhancement Algorithm Based on Guided Filtering'
+    year: 2015
     location: China
-    description:
-    - 'University of Science and Technology of China'
-    - 'In Situ Transdermal Vaccine. We constructed a macromolecule transdermal delivery system with the support of TD-1 polypeptide in Bacillus subtilis. We also designed a reporter system and a kill switch for usability and biosafety.'
+    items:
+    - 'Developed an extremely fast processing image method based on guilded flitering in order to make the original blurred and noisy nigh image clear and more suitable for human eys to observe'
+    - 'Details are clearly presented and noises are successfully obliterated through processing the night image’s two layers independently which are separated in the HVS color space'
+    - 'Guided filtering is used for the night image enhancement for the first time and a paper was published on the basis of the finding'
+  - title: 'Ali Tianchi Intelligent Traffic Forecast Challenge - top 3%'
+    year: 2017
+    location: China
+  - title: 'Jigsaw Unintended Bias in Toxicity Classification (Kaggle) - top 10%'
+    year: 2019
+    location: China
   note: '<b>Note:</b> for further details on my research, please see the <a href="/publications/" target="_blank"><b>publications</b></a> page.'
 
-- title: Honors and Awards
+- title: Working Experience
   type: table
   contents:
-  - year: Fellowships
+  - title: 'Recommendation Algorithm Engineer, YY Business Unit, Baidu'
+    year: 2019-2021
     items:
-    - '<a href="http://www.icsb.tsinghua.edu.cn" target="_blank"><b>Outstanding Fellowship of the Beijing Advanced Innovation Center of Structure Biology at Tsinghua University</b></a> (2019)'
-    - '<a href="http://www.icsb.tsinghua.edu.cn" target="_blank"><b>Innovation Fellowship of the Beijing Advanced Innovation Center of Structural Biology at Tsinghua University</b></a> (2016)'
-  - year: Scholarships
+    - 'Responsible for the construction of the company’s data analysis and data mining business analysis system, design of overall system architecture, planning and giving full play to the value of data, improving data quality, and promoting better development of the company’s business'
+    - 'Establish business data analysis model to guide the in-depth mining and effective use of billion-level data, fully realize the commercial value of data and building one of the core competitiveness of the company'
+  - title: 'Software Development Engineer, Oracle China R & D Center'
+    year: 2018-2019
     items:
-    - 'Student Scholarship (2011-2013)'
-  - year: Awards
-    items:
-    - '<a href="http://gpb.big.ac.cn/news/1010" target="_blank"><b>Top Ten Advances in Bioinformatics in China in 2019</b></a> (2020)'
-    - '<a href="http://gpb.big.ac.cn/news/1008" target="_blank"><b>Top Ten Algorithms and Tools for Bioinformatics in China in 2019</b></a> (2020)'
-    - 'International Genetically Engineered Machine Competition (iGEM): Gold Medal (2013)'
-    
-- title: Skills
+    - 'Provided cloud computing customers with visual analytics solutions of integrated monitoring and management'
+    - 'Solved cross-platform problems that have existed for a long period and optimized running efficiency'
+    - 'Provided front-end technical support for our team, cooperating with foreign colleagues'
+
+- title: Honors & Awards
   type: list
   contents:
-  - '○ Designing artificial intelligence algorithm for biological problems'
-  - '○ Biological data mining'  
-  - '○ Single-cell analysis'
-  - '○ Network analysis'
-  - '○ Frameworks: Pytorch, Tensorflow, NumPy, SciPy, Pandas.'
+    - 'o Full Scholarship for Graduate students of Wuhan University (2015-2017)'
+    - 'o Graduate Scholarship of Wuhan University (2015-2017)'
+    - 'o Outstanding Student of Wuhan University (2013-2015)'
+    - 'o 2nd Prize in the “Internet+” Thesis Competition of Wuhan University (2016)'
+    - 'o Outstanding Student Leaders of Wuhan University (2013)'
+    - 'o 1st Prize of Summer Social Practice of Wuhan University (2012)'
+
+- title: Skills
+  type: table
+  contents:
+  - title: Languages
+    description:
+    - 'C | C++ | Java | Python | MATLAB | HTML | JavaScript | SQL | Hive SQL | Spark'
+  - title: Libraries
+    description:
+    - 'jQuery | Bootstrap | TensorFlow | Keras | Numpy | Matplotlib | Pandas | Pupeteer'
+  - title: Tools
+    description:
+    - 'Node.js | Flask | requireJS | Knockout | ApiGateway | Rest API'
